# hardwareinfo

./: .gitignore  CMakeLists.txt  README.md  shell.nix
include/: Cpu.hpp  Ram.hpp
src/: Cpu.cpp  Ram.cpp
tests/: CMakeLists.txt  main.cpp  main.qml
